--- a/style.css
+++ b/style.css
@@ -24,6 +24,24 @@
   unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
 }
 
+.hidden {
+  display: none;
+}
+
+.hovercraft {
+  position: relative;
+  transform: translateZ(0);
+}
+
+.hovercraft > span {
+  text-align: center;
+  position: fixed;
+  top: -50px;
+  color: orange;
+  width: 100%;
+  font-weight: bold;
+}
+
 span.env-var {
   color: orange;
 }
@@ -50,10 +68,11 @@ header {
 }
 
 #profile-picture > img {
+  margin: 0 1rem;
   max-width: 100%;
 }
 
-a {
+a.btn-link {
   text-decoration: none;
   color: #08AA6E;
   font-weight: bold;
@@ -61,7 +80,7 @@ a {
   border-radius: 2px;
 }
 
-a:hover {
+a.btn-link:hover {
   color: white;
   background-color: #08AA6E;
 }
