--- a/style.css
+++ b/style.css
@@ -24,6 +24,16 @@
   unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
 }
 
+
+body {
+  color: white;
+  background-color: #181A1B;
+  font-family: 'Ubuntu Sans Mono Variable';
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .hidden {
   display: none;
 }
@@ -50,17 +60,12 @@ span.env-var {
   max-width: 100%;
 }
 
-body {
-  color: white;
-  background-color: #181A1B;
-  font-family: 'Ubuntu Sans Mono Variable';
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
 header {
   margin: 2rem;
+}
+
+.github-readme-stats {
+  display: none;
 }
 
 #profile-picture {
@@ -110,13 +115,36 @@ footer {
   margin-bottom: 2rem;
 }
 
-@media (min-width: 600px) {
-    #profile-picture > img {
-        width: 600px;
-        margin: 0 1rem;
-    }
+@media (min-width: 400px) {
+  .github-readme-stats {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    /* justify-content: space-between; */
+    /* align-items: flex-start; */
+  }
 
-    article {
-      width: 600px;
-    }
+  .github-readme-stats img {
+    max-height: 200px;
+  }
+}
+
+@media (min-width: 650px) {
+  .github-readme-stats {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
+  }
+}
+
+@media (min-width: 750px) {
+  #profile-picture > img {
+    width: 700px;
+    margin: 0 1rem;
+  }
+
+  article {
+    width: 700px;
+  }
 }
