--- a/style.css
+++ b/style.css
@@ -1,13 +1,3 @@
-:root {
-    --background-color: #1e1e2e;
-    --surface-color: #45475a;
-    --text-color: #cdd6f4;
-    --accent-color: #cba6f7;
-    --header-color: #fab387;
-    --sub-header-color: #f9e2af;
-    --important-color: #f38ba8;
-}
-
 * {
   margin: 0;
   padding: 0;
@@ -23,7 +13,6 @@
   src: url(https://cdn.jsdelivr.net/fontsource/fonts/ubuntu-sans-mono:vf@latest/latin-wght-normal.woff2) format('woff2-variations');
   unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
 }
-
 
 body {
   color: white;
@@ -91,6 +80,7 @@ a.btn-link:hover {
 
 .intro {
   margin-top: -0.5rem;
+  border-style: solid;
 }
 
 article {
@@ -99,7 +89,7 @@ article {
   text-align: left;
   padding: 1rem;
   background-color: #0E1013;
-  border: 3px dashed #08AA6E;
+  border: 2px dashed #08AA6E;
 }
 
 .title {
