--- a/style.css
+++ b/style.css
@@ -1,164 +1,185 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 /* ubuntu-sans-mono-latin-wght-normal */
 @font-face {
-    font-family: 'Ubuntu Sans Mono Variable';
-    font-style: normal;
-    font-display: swap;
-    font-weight: 400 700;
-    src: url(https://cdn.jsdelivr.net/fontsource/fonts/ubuntu-sans-mono:vf@latest/latin-wght-normal.woff2) format('woff2-variations');
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  font-family: 'Ubuntu Sans Mono Variable';
+  font-style: normal;
+  font-display: swap;
+  font-weight: 400 700;
+  src: url(https://cdn.jsdelivr.net/fontsource/fonts/ubuntu-sans-mono:vf@latest/latin-wght-normal.woff2) format('woff2-variations');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
 body {
-    color: white;
-    background-color: #131516;
-    font-family: 'Ubuntu Sans Mono Variable';
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  color: white;
+  background-color: #131516;
+  font-family: 'Ubuntu Sans Mono Variable';
+  font-size: 16px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .hidden {
-    display: none;
+  display: none;
 }
 
 .hovercraft {
-    position: relative;
-    transform: translateZ(0);
+  position: relative;
+  transform: translateZ(0);
 }
 
 .hovercraft>span {
-    text-align: center;
-    position: fixed;
-    top: -3rem;
-    color: orange;
-    width: 100%;
-    font-weight: bold;
+  text-align: center;
+  position: fixed;
+  top: -3rem;
+  color: orange;
+  width: 100%;
+  font-weight: bold;
 }
 
 span.env-var {
-    color: orange;
+  color: orange;
 }
 
 #keyboard-picture {
-    max-width: 100%;
+  max-width: 100%;
 }
 
 header {
-    margin: 2rem;
+  margin: 2rem;
 }
 
 .github-stats-article {
-    display: none;
+  display: none;
 }
 
 #profile-picture {
-    margin-top: 2rem;
+  margin-top: 2rem;
 }
 
 #profile-picture>img {
-    max-width: 100%;
+  max-width: 100%;
 }
 
 a.btn-link {
-    text-decoration: none;
-    color: #57F7BC;
-    font-weight: bold;
-    padding: 2px;
-    border-radius: 2px;
+  text-decoration: none;
+  color: #57F7BC;
+  font-weight: bold;
+  padding: 2px;
+  border-radius: 2px;
 }
 
 a.btn-link:hover {
-    color: black;
-    background-color: #57F7BC;
+  color: black;
+  background-color: #57F7BC;
 }
 
 .intro {
-    margin-top: -0.5rem;
-    border-style: solid;
+  margin-top: -0.5rem;
+  border-style: solid;
 }
 
 article {
-    margin: 0 1rem 2rem 1rem;
-    max-width: 100%;
-    text-align: left;
-    padding: 1rem;
-    background-color: #0E1013;
-    border: 2px dashed #08AA6E;
+  margin: 0 1rem 2rem 1rem;
+  max-width: 100%;
+  text-align: left;
+  padding: 1rem;
+  background-color: #0E1013;
+  border: 2px dashed #08AA6E;
 }
 
 .title {
-    margin-bottom: 1rem;
+  cursor: pointer;
+  margin-bottom: 1rem;
+  transition: 0.1s;
 }
 
 .title:before {
-    content: "$ ";
+  content: "$ ";
+}
+
+.title:hover {
+  color: #57F7BC;
 }
 
 .title.large {
-    display: none;
+  display: none;
+}
+
+.pre-json.large {
+  display: none;
 }
 
 footer {
-    text-align: center;
-    margin-bottom: 2rem;
+  text-align: center;
+  margin-bottom: 2rem;
 }
 
 @media (min-width: 400px) {
   .github-stats-article {
     display: block;
   }
-    .github-readme-stats {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        /* justify-content: space-between; */
-        /* align-items: flex-start; */
-    }
+  .github-readme-stats {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    /* justify-content: space-between; */
+    /* align-items: flex-start; */
+  }
 
-    #gh-snake {
-      max-width: 100%;
-    }
+  #gh-snake {
+    max-width: 100%;
+  }
 
-    .github-readme-stats img {
-        max-height: 200px;
-    }
+  .github-readme-stats img {
+    max-height: 200px;
+  }
 }
 
 @media (min-width: 650px) {
-    .title.large {
-        display: inline-block;
-    }
+  .title.large, .pre-json.large {
+    display: inline-block;
+  }
 
-    .title.small {
-        display: none;
-    }
+  .title.small, .pre-json.small {
+    display: none;
+  }
 
-    .github-readme-stats {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: flex-start;
-    }
+  .github-readme-stats {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
+  }
 
-    .github-stats {
-      display: flex;
-      flex-direction: column;
-    }
+  .github-stats {
+    display: flex;
+    flex-direction: column;
+  }
 }
 
 @media (min-width: 750px) {
-    #profile-picture>img {
-        width: 700px;
-        margin: 0 1rem;
-    }
+  #profile-picture>img {
+    width: 700px;
+    margin: 0 1rem;
+  }
 
-    article {
-        width: 700px;
-    }
+  article {
+    width: 700px;
+  }
+}
+
+.pre-json {
+   /* background: #f4f4f4; */
+   /* border-radius: 4px; */
+   /* font-family: monospace; */
+}
+
+.hl-str {
+  color: orange;
 }
