--- a/style.css
+++ b/style.css
@@ -193,14 +193,16 @@ footer {
 
 .books {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    text-align: center;
+    grid-template-columns: repeat(4, 1fr);
     justify-items: center;
     align-items: center;
     gap: 5px;
 }
 
 .books img {
-    max-width: 100%;
+    max-width: 90%;
+    margin: 0.5em 0;
     border: 1px solid #57F7BC;
 }
 
@@ -214,6 +216,10 @@ dialog {
     color: white;
     background-color: #131516;
     border: 5px dashed #f38ba8;
+}
+
+.http-cat {
+    max-width: 100%;
 }
 
 dialog>h2 {
